NetPol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bloodapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: bloodapp 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: Controller 
    ports:
    - protocol: TCP
      port: 80 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bloodapp-db 
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: kube-system
    ports:
    - protocol: UDP
      port: 80
